Custom lock icon

--- a/doxygen.conf
+++ b/doxygen.conf
@@ -1183,7 +1183,7 @@ HTML_EXTRA_STYLESHEET  = styleSheet_template.css
 # files will be copied as-is; there are no commands or markers available.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_EXTRA_FILES       = nav_edge.svg
+HTML_EXTRA_FILES       = nav_edge.svg sync_off.png sync_on.png
 
 # The HTML_COLORSTYLE_HUE tag controls the color of the HTML output. Doxygen
 # will adjust the colors in the style sheet and background images according to
