--- a/doxygen.conf
+++ b/doxygen.conf
@@ -1184,7 +1184,7 @@ HTML_EXTRA_STYLESHEET  = styleSheet_template.css
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
 HTML_EXTRA_FILES       = nav_edge_left.svg nav_edge_right.svg nav_edge_inter.svg \
-                         sync_off.png sync_on.png hex_bg.png
+                         sync_off.png sync_on.png hex_bg.png splitbar_handle.svg
 
 # The HTML_COLORSTYLE_HUE tag controls the color of the HTML output. Doxygen
 # will adjust the colors in the style sheet and background images according to
