Add new document icon

--- a/doxygen.conf
+++ b/doxygen.conf
@@ -1185,7 +1185,8 @@ HTML_EXTRA_STYLESHEET  = styleSheet_template.css
 
 HTML_EXTRA_FILES       = nav_edge_left.svg nav_edge_right.svg nav_edge_inter.svg \
                          sync_off.png sync_on.png hex_bg.png splitbar_handle.svg \
-                         striped_bg.js mag_glass.svg folderclosed.svg folderopen.svg
+                         striped_bg.js mag_glass.svg folderclosed.svg folderopen.svg \
+                         doc.svg
 
 # The HTML_COLORSTYLE_HUE tag controls the color of the HTML output. Doxygen
 # will adjust the colors in the style sheet and background images according to
