--- a/doxygen.conf
+++ b/doxygen.conf
@@ -1184,7 +1184,7 @@ HTML_EXTRA_STYLESHEET  = extra_stylesheet.css
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
 HTML_EXTRA_FILES       = nav_edge_left.svg nav_edge_right.svg nav_edge_inter.svg \
-                         sync_off.png sync_on.png hex_bg.png splitbar_handle.svg \
+                         sync_off.png sync_on.png splitbar_handle.svg \
                          striped_bg.js mag_glass.svg folderclosed.svg folderopen.svg \
                          doc.svg
 
