--- a/doxyfile.conf
+++ b/doxyfile.conf
@@ -1,8 +1,24 @@
+#
+# Example settings for Doxygen to use that style.
+# Paths might need to be adjusted to the proper directory the style is installed in.
+#
 
+# HTML header to include extra javascript
+HTML_HEADER            = that_style/header.html
 
-HTML_EXTRA_STYLESHEET  = extra_stylesheet.css
+# CSS file for that style
+HTML_EXTRA_STYLESHEET  = that_style/that_style.css
 
-HTML_EXTRA_FILES       = nav_edge_left.svg nav_edge_right.svg nav_edge_inter.svg \
-                         sync_off.png sync_on.png splitbar_handle.svg \
-                         striped_bg.js mag_glass.svg folderclosed.svg folderopen.svg \
-                         doc.svg
+# list of all files needed by that style
+
+HTML_EXTRA_FILES       = that_style/img/nav_edge_left.svg \
+                         that_style/img/nav_edge_right.svg \
+                         that_style/img/nav_edge_inter.svg \
+                         that_style/img/sync_off.png \
+                         that_style/img/sync_on.png \
+                         that_style/img/splitbar_handle.svg \
+                         that_style/img/doc.svg \
+                         that_style/img/mag_glass.svg \
+                         that_style/img/folderclosed.svg \
+                         that_style/img/folderopen.svg \
+                         that_style/js/striped_bg.js
